Basic server component

--- a/ServerManagement/Components/Layout/MainLayout.razor
+++ b/ServerManagement/Components/Layout/MainLayout.razor
@@ -7,7 +7,9 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="https://kerridgecs.udemy.com/course/blazor-deep-dive-from-beginner-to-advanced" target="_blank">Course</a>
+            <a href="https://github.com/frank-liu-toronto/BlazorDeepDive" target="_blank">Course Repository</a>
+            <a href="https://github.com/dillsa1299/BlazorDeepDive" target="_blank">My Repository</a>
         </div>
 
         <article class="content px-4">
