--- a/ServerManagement/Components/Layout/NavMenu.razor
+++ b/ServerManagement/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ServerManagement</a>
+        <a class="navbar-brand" href="">Server Management</a>
     </div>
 </div>
 
@@ -17,6 +17,12 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="servers">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Servers
             </NavLink>
         </div>
     </nav>
