--- a/ServerManagement/Components/Pages/Servers.razor
+++ b/ServerManagement/Components/Pages/Servers.razor
@@ -2,14 +2,45 @@
 
 <h3>Servers</h3>
 <br/>
-<ServerComponent></ServerComponent>
-<br />
-<ServerComponent></ServerComponent>
-<br />
-<ServerComponent></ServerComponent>
-<br />
-<ServerComponent></ServerComponent>
+
+<div class="container-fluid text-center">
+    <div class="row w-50">
+        @foreach (string city in cities)
+        {
+            <div class="col">
+
+                <div class="card";">
+                    <img src="@($"/images/{city}.png")" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <button type="button" class="btn btn-primary">@city</button>
+                    </div>
+                </div>
+
+                
+                <text>&nbsp;</text>
+            </div>
+        }
+    </div>
+</div>
+
+<br/>
+
+<ul>
+    @foreach(var server in servers)
+    {
+        <li>
+            @server.Name in @server.City is 
+            <span style="color:@((server.IsOnline?"green":"red"))">
+                @(server.IsOnline ? "online" : "offline")
+            </span>
+            &nbsp;
+            <a href="/servers/@server.Id" class="btn btn-link">Edit</a>
+        </li>
+    }
+</ul>
 
 @code {
+    private List<Server> servers = ServersRepository.GetServersByCity("Toronto");
+    private List<string> cities = CitiesRepository.GetCities();
 
 }
