--- a/ServerManagement/Components/Pages/EditServer.razor
+++ b/ServerManagement/Components/Pages/EditServer.razor
@@ -5,27 +5,68 @@
 
 @if (server != null)
 {
-    <p>
-        @server.Name
-    </p>
-    <p>
-        @server.City
-    </p>
-    <p>
-        @server.IsOnline
-    </p>
+    <EditForm Model="server" OnValidSubmit="Submit" FormName="FormServer">
+        <DataAnnotationsValidator></DataAnnotationsValidator>
+        <ValidationSummary></ValidationSummary>
+
+        <InputNumber @bind-Value="server.Id" hidden></InputNumber>
+
+        <div class="row mb-3">
+            <div class="col-2">
+                <label class="col-form-label">Name</label>
+            </div>
+            <div class="col-6">
+                <InputText @bind-Value="server.Name" class="form-control"></InputText>
+            </div>
+            <div class="col">
+                <ValidationMessage For="() => server.Name"></ValidationMessage>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-2">
+                <label class="col-form-label">City</label>
+            </div>
+            <div class="col-6">
+                <InputText @bind-Value="server.City" class="form-control"></InputText>
+            </div>
+            <div class="col">
+                <ValidationMessage For="() => server.City"></ValidationMessage>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-2">
+                <label class="col-form-label">Online</label>
+            </div>
+            <div class="col-6">
+                <InputCheckbox @bind-value="server.IsOnline" class="form-check-input"></InputCheckbox>
+            </div>
+        </div>
+        <br/>
+        <div>
+            <button class="btn btn-primary" type="submit" href="/servers">Update</button>
+            &nbsp;
+            <a href="/servers" class="btn btn-primary">Close</a>
+        </div>
+    </EditForm>
 }
-<br/>
-<a href="/servers" class="btn btn-primary">Close</a>
 
 @code {
     [Parameter]
     public int Id { get; set; }
 
-    private Server? server;
+    [SupplyParameterFromForm]
+    private Server? server { get; set; }
 
     protected override void OnParametersSet()
     {
-        server = ServersRepository.GetServerById(this.Id);
+        server ??= ServersRepository.GetServerById(this.Id);
+    }
+
+    private void Submit()
+    {
+        if (server != null)
+        {
+            ServersRepository.UpdateServer(server.Id, server);
+        }
     }
 }
