--- a/ServerManagement/Components/Pages/Servers.razor
+++ b/ServerManagement/Components/Pages/Servers.razor
@@ -29,17 +29,16 @@
 
 <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Search Servers" 
-        @bind-value="serverFilter"
-        @bind-value:event="oninput"/>
+    @bind-value="serverFilter"
+    @bind-value:event="oninput"/>
     <button class="btn btn-outline-secondary" type="button" id="button-search" @onclick="HandleSearch">Search</button>
 </div>
 
 <br/>
 
 <ul>
-    @foreach(var server in servers)
-    {
-        <li>
+    <Virtualize Items="this.servers" Context="server">
+        <li @key="server.Id">
             @server.Name in @server.City is 
             <span style="color:@((server.IsOnline?"green":"red"))">
                 @(server.IsOnline ? "online" : "offline")
@@ -54,8 +53,18 @@
                 <button type="submit" class="btn btn-primary">Delete</button>
             </EditForm>
         </li>
-    }
+    </Virtualize>
 </ul>
+
+<p>
+    <button class="btn btn-secondary"
+    @onclick="@(() =>
+            {
+                this.servers.Insert(0, new Server {Name = "ServerA", City = "Toronto" });
+            })">
+        Add Server 2
+    </button>
+</p>
 
 @code {
     private List<Server> servers = ServersRepository.GetServersByCity("Toronto");
